Add: ArrayDataSeries: detection of X/Y/Z ranges and getters